# usb-video

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: video_rgba_f.glsl  video_yuy2_f.glsl
app/src/main/cpp/: CMakeLists.txt  UsbVideoNativeLibrary.cpp  UsbVideoStreamer.cpp  UsbVideoStreamer.h
app/src/main/java/com/nano71/cameramonitor/core/usb/: UsbVideoNativeLibrary.kt
app/src/main/java/com/nano71/cameramonitor/feature/streamer/: StreamerActivity.kt  StreamerViewModel.kt
app/src/main/java/com/nano71/cameramonitor/feature/streamer/controller/: UsbStreamingController.kt
app/src/main/java/com/nano71/cameramonitor/feature/streamer/ui/: GridOverlayView.kt  HistogramView.kt  VideoContainerView.kt
app/src/main/java/com/nano71/cameramonitor/feature/streamer/viewholder/: StreamingViewHolder.kt
app/src/main/res/layout/: streaming_screen.xml
app/src/main/res/values/: colors.xml
